--- a/config.yml
+++ b/config.yml
@@ -18,8 +18,8 @@ startup:
 
 discord:
 # Manage your discord settings
-  botToken: "" # Don't forget to enable intents (https://youtu.be/pzxVzEHk4ww?t=35)
-  prefix: "!"
+  botToken: "OTU3MzI3MDQ1MzEzMDQ4NjI3.Yj9KSQ.bjOYBtz9tGbkGqEdetZj8VVt0e8" # Don't forget to enable intents (https://youtu.be/pzxVzEHk4ww?t=35)
+  prefix: "!help"
 
 format:
 # Customize your embeds
@@ -31,14 +31,14 @@ format:
 minecraft:
 # Minecraft settings
   auth: "mojang" # Pick either mojang/microsoft
-  serverIP: "play.crystaldev.co"
+  serverIP: "play.minecadia.com"
   serverPort: "25565"
   version: "1.8.9"
-  joinCommand: "/ruby"
+  joinCommand: "/queue factions-pirate"
   joinDelay: 3 # Time in between alts joining (in seconds)
   joinCommandDelay: 3 # Time in between an alt joining and executing the join command (in seconds)
   hideErrors: true # To hide the "unknown transaction" warning, if you have trouble getting the bots up you might want to change this to false
 
 alts:
 # This can be an infinite amount of alts, remember to fill it out like this "- AltEmail@email.com:Password123!"
-- AltEmail@email.com:Password123!
+"- sub2tryharderstv@gmail.com:low2play"
