--- a/config.yml
+++ b/config.yml
@@ -19,13 +19,13 @@ startup:
 discord:
 # Manage your discord settings
   botToken: "OTU3MzI3MDQ1MzEzMDQ4NjI3.Yj9KSQ.bjOYBtz9tGbkGqEdetZj8VVt0e8" # Don't forget to enable intents (https://youtu.be/pzxVzEHk4ww?t=35)
-  prefix: "!help"
+  prefix: "!"
 
 format:
 # Customize your embeds
   successTitle: "Success!"
   errorTitle: "Error!"
-  footer: "Dutched's Alt Manager v1.5.2"
+  footer: "Dutched's Alt Manager v1.5.1"
   embedColor: "#9702ed"
 
 minecraft:
@@ -36,7 +36,6 @@ minecraft:
   version: "1.8.9"
   joinCommand: "/queue factions-pirate"
   joinDelay: 3 # Time in between alts joining (in seconds)
-  joinCommandDelay: 3 # Time in between an alt joining and executing the join command (in seconds)
   hideErrors: true # To hide the "unknown transaction" warning, if you have trouble getting the bots up you might want to change this to false
 
 alts:
