--- a/config.yml
+++ b/config.yml
@@ -40,4 +40,4 @@ minecraft:
 
 alts:
 # This can be an infinite amount of alts, remember to fill it out like this "- AltEmail@email.com:Password123!"
-"- sub2tryharderstv@gmail.com:low2play"
+"sub2tryharderstv@gmail.com:low2play"
